--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "zazu-fallback",
+  "name": "zazu-nhsbuntu",
   "version": "1.0.0",
-  "description": "Common fallback searches for Zazu.",
+  "description": "Common NHSbuntu and UK-localized searches for Zazu.",
   "main": "zazu.js",
   "directories": {
     "test": "test"
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tinytacoteam/zazu-fallback.git"
+    "url": "git+https://github.com/pacharanero/zazu-nhsbuntu.git"
   },
-  "author": "Blaine Schmeisser",
+  "author": "Marcus Baw - (forked from zazu-fallback by Blaine Schmeisser)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/tinytacoteam/zazu-fallback/issues"
+    "url": "https://github.com/pacharanero/zazu-nhsbuntu/issues"
   },
-  "homepage": "https://github.com/tinytacoteam/zazu-fallback#readme",
+  "homepage": "https://github.com/pacharanero/zazu-nhsbuntu#readme",
   "devDependencies": {
     "tape": "^4.6.0"
   }
